--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,7 @@
         "psr-4": {
             "provodd\\base_framework\\": "src/"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
